--- a/src/main/resources/templates/person/person.html
+++ b/src/main/resources/templates/person/person.html
@@ -19,6 +19,7 @@
 			</div>
 			<div class="card-body table-responsive">
 				<table class="table table-striped table-bordered table-hover nowrap" id="tableBiodata" style="width:100%">
+				
 				</table>
 			</div>
 		</div>
@@ -58,7 +59,7 @@
 
                         <div class="form-group">
                             <label>No Hp: </label>
-                            <input class="form-control" id="nohp" name="nohp" placeholder="No Hp" required type="text">
+                            <input class="form-control" id="noHp" name="noHp" placeholder="No Hp" required type="text">
                         </div>
 
 						<div class="form-group">
@@ -87,7 +88,14 @@
     <script th:src="@{/js/dataperson.js}"></script>
 
     <script>
-        $('#btn-tambah-biodata').click(function () {
+    tableBiodata.create();
+
+    /* $('#btn-cari-pasien').click(function () {
+        var tanggalLahir = new Date($('#tanggalLahir').val()) * 1;
+        tableKelolaPasien.create();
+    }); */
+       
+    $('#btn-tambah-biodata').click(function () {
             $('#modal-biodata').modal('show')
         });
 
