--- a/src/main/resources/templates/person/person.html
+++ b/src/main/resources/templates/person/person.html
@@ -96,6 +96,7 @@
     }); */
        
     $('#btn-tambah-biodata').click(function () {
+    		formBiodata.resetform();
             $('#modal-biodata').modal('show')
         });
 
