--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -127,6 +127,8 @@
 <!-- DataTables -->
 <script th:src="@{/plugins/datatables/jquery.dataTables.js}"></script>
 <script th:src="@{/plugins/datatables-bs4/js/dataTables.bootstrap4.js}"></script>
+<script th:src="@{/plugins/datatables-responsive/js/dataTables.responsive.min.js}"></script>
+ <script th:src="@{/plugins/datatables-responsive/js/responsive.bootstrap4.js}"></script>
 <!-- SurveyJs-->
 <!--<script src="https://surveyjs.azureedge.net/1.1.24/survey.jquery.min.js"></script>-->
 <!-- AdminLTE -->
