--- a/src/main/resources/templates/person/person.html
+++ b/src/main/resources/templates/person/person.html
@@ -85,6 +85,7 @@
 
 
 <th:block layout:fragment="add-scripts">
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script th:src="@{/js/dataperson.js}"></script>
 
     <script>
