--- a/src/main/resources/templates/fragment/sidebar.html
+++ b/src/main/resources/templates/fragment/sidebar.html
@@ -29,6 +29,12 @@
                             </a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="http://localhost:1212/getdata">
+                                <i class="far fa-circle nav-icon"></i>
+                                <p>Cari Data Person</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a href="http://localhost:1212/pendidikan" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Data Pendidikan</p>
