tabel data person + edit

--- a/src/main/resources/templates/fragment/sidebar.html
+++ b/src/main/resources/templates/fragment/sidebar.html
@@ -1,4 +1,4 @@
-<aside class="main-sidebar sidebar-dark-primary  elevation-4">
+<aside class="main-sidebar sidebar-dark-primary bg-navy elevation-4">
 	<!-- Sidebar -->
     <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
