--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -69,14 +69,14 @@
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
  <!-- Navbar -->
-    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+    <nav class="main-header navbar navbar-expand navbar-white navbar-dark bg-navy">
         <!-- Left navbar links -->
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="home" class="nav-link">Home</a>
+                <a href="home" class="nav-link">Semua Data</a>
             </li>
         </ul>
     </nav>
