--- a/src/main/resources/templates/pendidikan/pendidikan.html
+++ b/src/main/resources/templates/pendidikan/pendidikan.html
@@ -6,16 +6,17 @@
 
 <div class="row mb-2" layout:fragment="content-header">
 	<div class="col-sm-6">
-		<h1 class="m-0 text-dark">Biodata</h1>
+		<h1 class="m-0 text-dark">Form Jenjang Pendidikan</h1>
 	</div>
 </div>
 
 <div class="row" layout:fragment="content-body">
 	<div class="col-12">
 		<div class="card">
-			<div class="card-header">
-				<h3 class="card-title">Pendidikan</h3>
-				<button class="float-right btn-primary" id="btn-tambah-biodata">Tambah</button>
+			<div class="card-header bg-warning">
+				<h3 class="card-title">Jenjang Pendidikan</h3><br>
+				<input class="col-10" type="text" id="idPerson" name="idPerson" placeholder="ID Person" required>
+				<button class="float-right bg-navy" id="btn-tambah-biodata">Tambah</button>
 			</div>
 			<div class="card-body table-responsive">
 				<table class="table table-striped table-bordered table-hover nowrap" id="tableBiodata" style="width:100%"></table>
@@ -26,23 +27,23 @@
 	<div class="modal fade" id="modal-biodata">
 		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
-				<div class="modal-header">
-					<h4 class="modal-title">Jenjang Pendidikan</h4>
+				<div class="modal-header bg-warning">
+					<h4 class="modal-title"> Form Jenjang Pendidikan</h4>
 					<button aria-label="Close" class="close" data-dismiss="modal" type="button">
 						<span aria-hidden="true">&times;</span>
 					</button>
 				</div>
 				
-				<div class="modal-body">
+				<div class="modal-body bg-gray">
 					<div class="card-header">
 					</div>
 					<form id="form-biodata" role="form">
 						<input name="id" type="hidden"/>
 						
-						<div class="form-group">
+						<!-- <div class="form-group">
 							<label>Id Person</label>
 							<input class="form-control" id="idPerson" name="idPerson" placeholder="id person" required type="text">
-						</div>
+						</div> -->
 						<fieldset class="fieldset">
 						<div class="form-group">
 							<label>Jenjang</label>
@@ -75,8 +76,8 @@
 						</fieldset>
 					</form>
 				</div>
-				<div class="modal-footer justify-content-between">
-                    <button class="btn btn-default" data-dismiss="modal" type="button">Close</button>
+				<div class="modal-footer justify-content-between bg-gray-dark">
+                    <button class="btn btn-danger" data-dismiss="modal" type="button">Close</button>
                     <button class="btn btn-warning" id="btn-tambah-field" type="button">Tambah Field</button>
                     <button class="btn btn-primary" id="btn-save-biodata" type="button">Save</button>
                 </div>
@@ -89,6 +90,8 @@
     <script th:src="@{/js/datapendidikan.js}"></script>
 
     <script>
+    
+    	/* tableBiodata.create(); */
        
 	    $('#btn-tambah-biodata').click(function () {
     		formBiodata.resetform();
