--- a/src/main/resources/templates/person/person.html
+++ b/src/main/resources/templates/person/person.html
@@ -13,9 +13,9 @@
 <div class="row" layout:fragment="content-body">
     <div class="col-12">
 		<div class="card">
-			<div class="card-header bg-navy">
+			<div class="card-header bg-warning">
 				<h3 class="card-title">Biodata Person</h3>
-				<button class="float-right btn-primary" id="btn-tambah-biodata">Tambah</button>
+				<button class="float-right bg-navy" id="btn-tambah-biodata">Tambah</button>
 			</div>
 			<div class="card-body table-responsive">
 				<table class="table table-striped table-bordered table-hover nowrap" id="tableBiodata" style="width:100%">
@@ -29,7 +29,7 @@
     <div class="modal fade" id="modal-biodata">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <div class="modal-header bg-navy">
+                <div class="modal-header bg-warning">
                     <h4 class="modal-title">Form Biodata</h4>
                     <button aria-label="Close" class="close" data-dismiss="modal" type="button">
                         <span aria-hidden="true">&times;</span>
@@ -75,8 +75,8 @@
 
                     </form>
                 </div>
-                <div class="modal-footer justify-content-between">
-                    <button class="btn btn-default" data-dismiss="modal" type="button">Close</button>
+                <div class="modal-footer justify-content-between bg-gray-dark">
+                    <button class="btn btn-danger" data-dismiss="modal" type="button">Close</button>
                     <button class="btn btn-primary" id="btn-save-biodata" type="button">Save</button>
                 </div>
             </div>
