input jenjang pendidikan

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -85,7 +85,7 @@
     <th:block layout:replace="~{fragment/sidebar}"></th:block>
 
     <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
+    <div class="content-wrapper bg-white">
   		<!-- Content Header (Page header) -->
         <div class="content-header">
             <div class="container-fluid" >
