--- a/src/main/resources/templates/fragment/sidebar.html
+++ b/src/main/resources/templates/fragment/sidebar.html
@@ -17,7 +17,7 @@
                     <a class="nav-link" href="#">
                         <i class="nav-icon fas fa-tachometer-alt"></i>
                         <p>
-                            Data
+                            Form
                             <i class="right fas fa-angle-left"></i>
                         </p>
                     </a>
@@ -25,13 +25,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="http://localhost:1212/person">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>Data Person</p>
+                                <p>Form Biodata</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="http://localhost:1212/pendidikan" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>Data Pendidikan</p>
+                                <p>Form Pendidikan</p>
                             </a>
                         </li>
                     </ul>
