--- a/src/main/resources/templates/pendidikan/pendidikan.html
+++ b/src/main/resources/templates/pendidikan/pendidikan.html
@@ -6,7 +6,7 @@
 
 <div class="row mb-2" layout:fragment="content-header">
 	<div class="col-sm-6">
-		<h1 class="m-0 text-dark">Form Jenjang Pendidikan</h1>
+		<h1 class="m-0 text-dark">Jenjang Pendidikan</h1>
 	</div>
 </div>
 
@@ -22,7 +22,7 @@
 				<table class="table table-striped table-bordered table-hover nowrap bg-white" id="tableBiodata" style="width:100%"></table>
 			</div>
 			<button class="float-right bg-navy" id="btn-save-biodata">Save</button>
-			<button class="float-right bg-warning text-bold" id="btn-cancel-biodata">Cancel</button>
+			<button class="float-right bg-danger text-bold" id="btn-cancel-biodata">Cancel</button>
 		</div>
 	</div>
 	
