--- a/src/main/resources/templates/person/person.html
+++ b/src/main/resources/templates/person/person.html
@@ -17,9 +17,8 @@
 				<h3 class="card-title">Biodata Person</h3>
 				<button class="float-right bg-navy" id="btn-tambah-biodata">Tambah</button>
 			</div>
-			<div class="card-body table-responsive">
-				<table class="table table-striped table-bordered table-hover nowrap" id="tableBiodata" style="width:100%">
-				
+			<div class="card-body table-responsive bg-gray">
+				<table class="table table-striped bg-white table-bordered table-hover nowrap" id="tableBiodata" style="width:100%">
 				</table>
 			</div>
 		</div>
