--- a/src/main/resources/templates/fragment/sidebar.html
+++ b/src/main/resources/templates/fragment/sidebar.html
@@ -3,8 +3,11 @@
     <div class="sidebar">
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+        	<div class="image">
+                <img th:src="@{/dist/img/logoP.jpg}" class="img-circle elevation-2" alt="User Image">
+            </div>
             <div class="info">
-                <a class="d-block" href="#">Putri Dwi JS</a>
+                <a class="d-block" style="font-family:monaco" href="#">Putri Dwi JS</a>
             </div>
         </div>
 
