--- a/src/main/resources/templates/person/get.html
+++ b/src/main/resources/templates/person/get.html
@@ -6,15 +6,15 @@
 
 <div class="row mb-2" layout:fragment="content-header">
 	<div class="col-sm-6">
-		<h1 class="m-0 text-dark">Data Person</h1>
+		<h1 class="m-0 text-dark" style="font-family:SFMono-Regular; font-size:30px">Data Person</h1>
 	</div>
 </div>
 
 <div class="row" layout:fragment="content-body">
     <div class="col-12">
-		<div class="card">
+		<div class="card bg-gray">
 			<div class="card-body table-responsive">
-				<table class="table table-striped table-bordered table-hover nowrap" id="tableBiodata" style="width:100%">
+				<table class="table table-striped table-bordered table-hover nowrap bg-white" id="tableBiodata" style="width:100%">
 				</table>
 			</div>
 		</div>
