--- a/src/main/resources/templates/person/person.html
+++ b/src/main/resources/templates/person/person.html
@@ -6,7 +6,7 @@
 
 <div class="row mb-2" layout:fragment="content-header">
 	<div class="col-sm-6">
-		<h1 class="m-0 text-dark">Biodata</h1>
+		<h1 class="m-0 text-dark" style="font-family:SFMono-Regular; font-size:30px">Biodata</h1>
 	</div>
 </div>
 
@@ -14,7 +14,7 @@
     <div class="col-12">
 		<div class="card">
 			<div class="card-header bg-warning">
-				<h3 class="card-title">Biodata Person</h3>
+				<h3 class="card-title" style="font-family:SFMono-Regular;font-size:22px">Biodata Person</h3>
 				<button class="float-right bg-navy" id="btn-tambah-biodata">Tambah</button>
 			</div>
 			<div class="card-body table-responsive bg-gray">
