--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -76,7 +76,7 @@
                 <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
             </li>
             <li class="nav-item d-none d-sm-inline-block">
-                <a href="http://localhost:1212/getdata" class="nav-link">Semua Data</a>
+                <a href="http://localhost:1212/getdata" class="nav-link">Cari Data</a>
             </li>
         </ul>
     </nav>
