--- a/src/main/resources/templates/fragment/sidebar.html
+++ b/src/main/resources/templates/fragment/sidebar.html
@@ -4,7 +4,7 @@
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         	<div class="image">
-                <img src="@{/dist/img/logoP.jpg}" class="img-circle elevation-2" alt="User Image">
+                <img th:src="@{/dist/img/logoP.jpg}" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
                 <a class="d-block" style="font-family:monaco" href="#">Putri Dwi JS</a>
