--- a/src/main/resources/templates/pendidikan/pendidikan.html
+++ b/src/main/resources/templates/pendidikan/pendidikan.html
@@ -21,7 +21,7 @@
 			<div class="card-body bg-gray">
 				<table class="table table-striped table-bordered table-hover nowrap bg-white" id="tableBiodata" style="width:100%"></table>
 				<button class="float-right bg-navy" id="btn-save-biodata">Save</button>
-				<button class="float-right bg-danger text-bold" id="btn-cancel-biodata">Cancel</button>
+				<button class="float-right bg-danger" id="btn-cancel-biodata">Cancel</button>
 			</div>
 			
 		</div>
