--- a/src/main/resources/templates/pendidikan/pendidikan.html
+++ b/src/main/resources/templates/pendidikan/pendidikan.html
@@ -16,6 +16,7 @@
 			<div class="card-header bg-warning">
 				<h3 class="card-title" style="font-family:SFMono-Regular;font-size:20px">ID Person</h3><br>
 				<input class="col-10" type="text" id="idPerson" name="idPerson" placeholder="ID Person" required>
+				<button class="float-right bg-danger" id="btn-cari-biodata">Cari Data</button>
 				<button class="float-right bg-navy" id="btn-tambah-biodata">Tambah</button>
 			</div>
 			<div class="card-body bg-gray">
